examples/test/testpolicy9522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9522
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key17: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value1
          key45: value31
          key5: value32
      podSelector:
        matchLabels:
          key24: value45
